# c_plusplus_labs

./: .gitignore  CMakeLists.txt  README.md
lab1/: CMakeLists.txt  README.md  main.cpp
lab1/include/: closest_to_bound.h
lab1/tests/: tests01.cpp
src/: closest_to_bound.cpp
